environments/dev/eduhamuy-web/deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eduhamuy-web
spec:
  template:
    spec:
      containers:
        - name: eduhamuy-web
