environments/dev/eduhamuy-web/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eduhamuy-web-gateway
spec:
  gatewayClassName: approuting-istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      hostname: dev.eduhamuy.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eduhamuy-dev-tls
      allowedRoutes:
        namespaces:
          from: Same
