environments/dev/eduhamuy-web/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eduhamuy-web-http-redirect
spec:
  parentRefs:
    - name: eduhamuy-web-gateway
      sectionName: http
  hostnames:
    - dev.eduhamuy.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
